--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
             </div>
         </div>
     </div>
+    <div class="hr_line">
+        <hr>
+        <div>
+            <span>01</span>
+            <span>/05</span>
+            <span>•</span>
+        </div>
+    </div>
+    <div class="f_engagements">
+        <p>feature engagements</p>
+    </div>
 </body>
 
 </html>
